fix overflow issue with email

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ h2{
 .profile {
     border: solid 2px orange;
     height: 130px;
-    width: 400px;
+    width: 420px;
     display: flex;
     align-items: center;
     background-color: #F4F4F4;
